--- a/docs/css/master.css
+++ b/docs/css/master.css
@@ -9,3 +9,10 @@ header {
 		padding: 10px;
 		margin-bottom: 0;
 }
+
+header h1 {
+		margin: 0px;
+		color: white;
+		font-size: xx-large;
+		text-align: center;
+}
